# openqp

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  pyproject.toml
.github/workflows/: build_wheels.yml  docker-build.yml  test_docker
docs/: CMakeLists.txt
docs/ford/: openqp.md
docs/ford/guide/: index.md
docs/sphinx/: Makefile  conf.py  requirements.txt
include/: oqp.h
pyoqp/: CMakeLists.txt  setup.py
pyoqp/oqp/: pyoqp.py
pyoqp/oqp/molecule/: molecule.py  oqpdata.py
pyoqp/oqp/utils/: file_utils.py
source/: CMakeLists.txt  basis_api.F90  otr_interface.F90  scf.F90  tagarray_driver.F90  trah.F90  types.F90
source/integrals/: grd1.F90  int1.F90
source/modules/: apply_basis.F90  hf_gradient.F90  int1e.F90  qmmm.F90  resp.F90  tdhf_mrsf_z_vector.F90
